@@ -1,11 +1,11 @@
-./BUILD = 39b562805836417af901af7de4b395a5
-./CHANGELOG = 21ef8f6fcd92f149a7dff5a0f39abb58
+./BUILD = 780083d937629333aa6b26c0e702f438
+./CHANGELOG = 3d7ae31568e5287ed0703dc3707c31e0
 ./CONTENT = e5fb179512b7edc99d23ed0d67cf08a1
 ./LICENSE = 43df073a04022f63913c379646905da6
-./Makefile = 2094d2d544157afa0c3de2a4de5f8aad
+./Makefile = 6550aac96da65fd4ec5d66fb94b303e9
 ./README.md = 0e7b43624c0d0cf87a4fecbba33af42f
 ./TARGETS = bbf3849fd4dc7cdbddf585daa3ddba3d
-./VERSION = 6b260be35f0d5493d631af2f03f83582
+./VERSION = 815cd43b6bba17222c25fa91dd65a5f7
 ./alloc.c = f273f8d97eb5567eadddb0554162dbff
 ./base64.c = 3a2830988bc99a672f09557b288dfd81
 ./buffer.c = 907ba59e08b6e365169080249ec954f7
@@ -15,20 +15,20 @@
 ./cdbread.c = 5eeb568fb122813c7ac0a3d273b98591
 ./conf-build = a6b6fd07cb52744a56dd21cfa98a8ab5
 ./configure = 03b12b55621e041bc57768e13687401f
-./dnsstub = b54d275a14a7ea2d898834f44948eba6
+./dnsstub = 16af8b9b8615a9dd02a3cd413f3d3da3
 ./dnsstub/Makefile = 68b1b5f7346c11e4db42e699277b0960
 ./dnsstub/README = 6c1bacb8c0bc728edee59a780b7a2cfe
 ./dnsstub/TARGETS = 723bd9a97f59f9091fbe2fba10ef8e5e
 ./dnsstub/dns_cname.c = b989443bce37c8ad3e6baba0e535a0a8
 ./dnsstub/dns_dfd.c = cd716bb7d02a038d05181ec5879ef8aa
 ./dnsstub/dns_domain.c = e79ee91862f5d06ec892a228489aca3f
-./dnsstub/dns_dtda.c = aa392b35d7ad4d0fb247a9c14c7e3aca
-./dnsstub/dns_ip.c = 81de221a27eaf734578f1aac771e3d6c
+./dnsstub/dns_dtda.c = b5a7a1a4ef185b2e450d461b9c5d005a
+./dnsstub/dns_ip.c = 717fa9de44290b962b6068fcdbb609c3
 ./dnsstub/dns_ipq.c = 8d312e9e0673b0aa88f3a8e1a17eab00
-./dnsstub/dns_mx.c = 72b8405db5f87d065265a896c73cc4cc
+./dnsstub/dns_mx.c = 31aaa7ebf7ea6dc2f10179989b0610b7
 ./dnsstub/dns_name.c = 52887c5b5909680989da7208ef9e30b9
 ./dnsstub/dns_nd.c = 0ae702e0f8ec85b136da043ed55b47d7
-./dnsstub/dns_packet.c = f7f1c3f8486d6b4177364041f990c2c6
+./dnsstub/dns_packet.c = a6564414c3603d52fead3bf8fcf3353b
 ./dnsstub/dns_random.c = 7429f11a2181d0771046ffd85f4acb38
 ./dnsstub/dns_rcip.c = bb06d397b5cca734b7441eae8362861f
 ./dnsstub/dns_rcrw.c = 736a369250a2bf02fdd63f6f0dd8a80a
@@ -42,7 +42,7 @@
 ./fmt.c = b2627c34a39b7a492ec07969931c6bc9
 ./getln.c = bb694220f8bedb7f7f8a8dd8a6d91347
 ./getoptb.c = 92c4305401f59359b8dac69e1df84647
-./include = e576acb96b46185daa1a1dd9ea975df4
+./include = c31be025d30276c421975c2ebd914349
 ./include/alloc.h = fc20a6d23d60eeaa84a913b19cea2a6f
 ./include/base64.h = 518e08181673aff5e497eb526a427b1d
 ./include/buffer.h = 4ff0a37e7b614e0d80123782f706f54a
@@ -52,7 +52,7 @@
 ./include/cdbread.h = d2e5c39b59601a81225c94b447c04058
 ./include/close.h = a1a84cfde83c8cef39c5ca5f52796aee
 ./include/direntry.h = ed9e2af8fed1975b017883488b0db2f7
-./include/dnsresolv.h = 22bf90df94a11271f620d24849421d27
+./include/dnsresolv.h = 4b60ee852037a686c9c94a8ea43718e2
 ./include/env.h = a7da4973f1cbe775c2535c02c2427cda
 ./include/error.h = 7886039fc72d57919c1c6db56b5fc324
 ./include/exit.h = 45e2e3e56314e2332837a61e1c866423
@@ -91,7 +91,7 @@
 ./ip6.c = 8b00b6650c49aa993253305576db03b0
 ./lock.c = 50aa9fca4611c86f943c49256b7a001a
 ./logmsg.c = 369b9f1d4171cd4e63d2c2f246697fde
-./man = a2153643f3fd6ff9ec0c689ab587673d
+./man = 9412de03bdf62ed4fa6b6f1e61b5a02f
 ./man/alloc.3 = 56b67538656c462ed8bf14434ffabbe4
 ./man/buffer.3 = 3abe76f70b7a683a32130fbcf7c45509
 ./man/byte.3 = 1f7b64b865af727150f9b951154b6fee
@@ -108,7 +108,7 @@
 ./man/getoptb.3 = eb4ff31f223bcf561043fd96e8bf7fcd
 ./man/iopause.3 = 4705db96ec459124a7cac08c75621b43
 ./man/ip4.3 = a79c4d07d73ddf532526eb0dd71e9cf1
-./man/ip6.3 = ab9a9ece470c35f05b2b7a330b4e91c3
+./man/ip6.3 = d02968a0e9f57ddd3f298083906657c9
 ./man/logmsg.3 = 0aa320f8e4545c51659f3d2a012d35e7
 ./man/pathexec.3 = 9dc8a2da96e5da8682c45e8874dbd965
 ./man/scan.3 = afacfa48685c43297bd2e0aab897b1c8
@@ -136,7 +136,7 @@
 ./seek.c = 5c2ee16ea4ec99584d702ff55d9c9d19
 ./sharedlib = bde12e503174244d57ad35135b5d25e9
 ./sig.c = a8a98f1c8c27eece5f341ec05f46e80e
-./socket_bind.c = 6b0a9c79f4d73318c8efb027b4403b62
+./socket_bind.c = 129aa71a0c43726b955df56769f1c6bf
 ./socket_connect.c = 5d46aba7a0bd5f08bee43bc23dc6b1ff
 ./socket_if.c = c841f0681878e90fbac87dc4ce7ab6fe
 ./socket_info.c = 5d33dbae7f084358db888477931e2a13
