@@ -26,7 +26,7 @@ int dns_domain_todot_cat(stralloc *out,const char *d)
       if (((ch2 >= 'a') && (ch2 <= 'z')) || 
           ((ch2 >= '0') && (ch2 <= '9')) || 
            (ch2 == '-') || (ch2 == '_')) {
-        if (!stralloc_append(out,&ch2)) return 0;
+        if (!stralloc_append(out,&ch2)) return DNS_MEM;
       }
       else {                                         // IPv4 -> octal
         ch3 = ch2;
@@ -34,10 +34,10 @@ int dns_domain_todot_cat(stralloc *out,const char *d)
         buf[2] = '0' + (ch3 & 7); ch3 >>= 3;
         buf[1] = '0' + (ch3 & 7);
         buf[0] = '\\';
-        if (!stralloc_catb(out,buf,4)) return 0;
+        if (!stralloc_catb(out,buf,4)) return DNS_MEM;
       }
     }
     if (!*d) return 1;
-    if (!stralloc_append(out,".")) return 0;
+    if (!stralloc_append(out,".")) return DNS_MEM;
   }
 }
