@@ -50,13 +50,14 @@ int dns_mx_packet(stralloc *out,const char *buf,unsigned int len)
 
 int dns_mx(stralloc *out,const stralloc *fqdn)
 {
-  int rc;
+  int rc = 0;
 
   if (!dns_domain_fromdot(&q,fqdn->s,fqdn->len)) return DNS_ERR;
-  if (dns_resolve(q,DNS_T_MX) < 0) return DNS_ERR;
-  if ((rc = dns_mx_packet(out,dns_resolve_tx.packet,dns_resolve_tx.packetlen)) < 0) return DNS_ERR;
-  dns_transmit_free(&dns_resolve_tx);
-  dns_domain_free(&q);
+  if (dns_resolve(q,DNS_T_MX) >= 0) {
+    if ((rc = dns_mx_packet(out,dns_resolve_tx.packet,dns_resolve_tx.packetlen)) < 0) return DNS_ERR;
+    dns_transmit_free(&dns_resolve_tx);
+    dns_domain_free(&q); 
+  }
 
   return rc;
 } 
